--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-server\test-portfolio-bf017-eda818275df1.json
+server/test-portfolio-bf017-eda818275df1.json
+server/firebase_conifig.json
